--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "supabase": "^1.207.9",
     "typescript": "^5.6.3",
-    "vite-plugin-eslint2": "^5.0.1"
+    "vite-plugin-eslint2": "^5.0.1",
+    "vue-dompurify-html": "^5.1.0"
   }
 }
