[dewbee] develop v0.0.1 - vue-dompurify tjfcl

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
+    "vercel-build": "NITRO_PRESET=vercel nuxt build",
     "upgrade:force": "nuxt upgrade --force",
     "supabase:login": "yarn supabase login",
     "supabase:type": "supabase gen types --lang=typescript --project-id jkosbdugjjsuhxgkeokn --schema public > types/supabase.ts"
