[dewbee] develop v0.1.0 1. `Nuxt Ui V3` 적용처리 2. `Header` 메뉴 설정 3. `Login` 기능 구현 4. `기본 페이지` 구성

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,10 +22,22 @@
         "value-no-vendor-prefix": null,
         "rule-empty-line-before": null,
         "declaration-empty-line-before": "never",
-        "import-notation": "url",
+        "import-notation": "string",
         "at-rule-empty-line-before": "never",
-        "keyframe-block-no-duplicate-selectors": false,
-        "no-descending-specificity": false
+        "keyframe-block-no-duplicate-selectors": null,
+        "no-descending-specificity": null,
+        "scss/at-rule-no-unknown": [
+          true,
+          {
+            "ignoreAtRules": ["use", "theme"]
+          }
+        ],
+        "at-rule-no-unknown": [
+          true,
+          {
+            "ignoreAtRules": ["use", "theme"]
+          }
+        ]
       }
     }
   ]
