[dewbee] develop v0.2.0 1. `로그인`시, 헤더 메인 메뉴 변경 구현 2. `설정 페이지` 하위 동작 컴포넌트 구현  - 통화 설정 구현  - 시작요일 설정 구현 3. `하위 페이지` 공통 타이틀 컴포넌트 구현 4. 기타 소스개선  - `Nuxt i18n v9` 업데이트 적용처리  - `filter, userData` fetch 방식 적용  - `각 테이블 Type` 적용처리  - 하단 카피라이트 작성

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vercel-build": "NITRO_PRESET=vercel nuxt build",
     "upgrade:force": "nuxt upgrade --force",
     "supabase:login": "yarn supabase login",
-    "supabase:type": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema public > types/supabase.ts"
+    "supabase:type": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema public > types/supabase.ts",
+    "supabase:type-filter": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema filter > types/supabaseFilter.ts"
   },
   "dependencies": {
     "@nuxtjs/seo": "^2.0.0-rc.23",
@@ -41,7 +42,7 @@
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@nuxtjs/supabase": "^1.4.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-    "@pinia/nuxt": "^0.6.0",
+    "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
