--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
     "@vueuse/nuxt": "^11.2.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "nuxt-time": "^1.0.2",
     "pinia": "^2.2.5",
     "sass": "^1.80.5",
