--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dewbee",
+  "name": "DewBee",
   "version": "0.8.4",
   "private": true,
   "author": {
@@ -32,6 +32,7 @@
     "@iconify-json/devicon": "^1.2.4",
     "@iconify-json/flag": "^1.2.2",
     "@iconify-json/lucide": "^1.2.11",
+    "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
