--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "nuxt-time": "^1.0.2",
+    "octokit": "^4.0.2",
     "pinia": "^2.2.5",
     "sass": "^1.80.5",
     "stylelint": "^16.10.0",
