[dewbee-001] develop v0.10.2 1. `프로필 수정` 메뉴 구현  - 이미지 변경/닉네임변경/메모추가 구현

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "supabase": "^1.207.9",
     "typescript": "^5.6.3",
     "vite-plugin-eslint2": "^5.0.1",
-    "vue-dompurify-html": "^5.1.0"
+    "vue-dompurify-html": "^5.1.0",
+    "yup": "^1.4.0"
   }
 }
