--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@iconify-json/devicon": "^1.2.4",
     "@iconify-json/flag": "^1.2.2",
+    "@iconify-json/fluent-emoji-high-contrast": "^1.2.1",
     "@iconify-json/lucide": "^1.2.11",
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
