[dewbee-001] develop v0.11.3 1. `문의사항` 구현중  - 게스트 문의 컴포넌트 구현  - 관리자 문의 리스트 확인 구현  - 로그인 사용자 문의 리스트 구현 2. `로그인` 시 이전 페이지 이동처리 3. `지출금액` 계산 버그수정  - 버튼 미동작 버그 수정 4. 폭 조절시, 대응개선  - `설정` 페이지 디자인 개선 5. 지출내용 조회 방식 개선

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "upgrade:force": "nuxt upgrade --force",
     "supabase:login": "yarn supabase login",
     "supabase:type": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema public > app/types/supabase.ts",
-    "supabase:type-filter": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema filter > app/types/supabaseFilter.ts"
+    "supabase:type-filter": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema filter > app/types/supabaseFilter.ts",
+    "supabase:type-board": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema board > app/types/supabaseBoard.ts"
   },
   "dependencies": {
     "@nuxtjs/seo": "^2.0.0-rc.23",
