--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@iconify-json/svg-spinners": "^1.2.1",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/ui": "^3.0.0-alpha.8",
+    "@nuxt/ui": "3.0.0-alpha.9",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "9.0.0",
@@ -50,6 +50,7 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
     "@vueuse/nuxt": "^11.2.0",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "nuxt-time": "^1.0.2",
@@ -62,6 +63,7 @@
     "supabase": "^1.207.9",
     "typescript": "^5.6.3",
     "vite-plugin-eslint2": "^5.0.1",
+    "vue-chartjs": "^5.3.2",
     "vue-dompurify-html": "^5.1.0",
     "yup": "^1.4.0"
   }
