[dewbee-002] develop v1.0.0 1. `DewBee` 배포  - Readme.md 업데이트  - OGImage 생성  - 푸터 텍스트 변경 2. `요금제` 메뉴 제거  - 현 단계에서 요금제 기능 제거처리 2. 기타 소스 개선  - paypal 결제 소스 검토

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nuxtjs/i18n": "9.0.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@nuxtjs/supabase": "^1.4.1",
+    "@paypal/paypal-js": "^8.1.2",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
