[dewbee-003] develop v1.3.0 1. `사이트 성능` 최적화  - 로고 로딩 성능 개선  - 불필요 font 삭제

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "vercel-build": "NITRO_PRESET=vercel nuxt build",
+    "vercel-build": "NITRO_PRESET=vercel-edge nuxt build",
     "upgrade:force": "nuxt upgrade --force",
     "supabase:login": "yarn supabase login",
     "supabase:type": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema public > app/types/supabase.ts",
