--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "curl -fsSL https://bun.sh/install | bash && ~/.bun/bin/bun install",
-  "buildCommand": "~/.bun/bin/bun run build"
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
