--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "supabase:type-board": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema board > app/types/supabaseBoard.ts"
   },
   "dependencies": {
-    "@nuxtjs/seo": "^2.0.0-rc.23",
+    "@nuxtjs/seo": "2.0.2",
     "nuxt": "3.13.2",
     "vue": "latest",
     "vue-router": "latest"
