[dewbee-004] develop v1.3.2 1. `사이트 성능` 최적화  - ESR Build 커맨드 추가

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "email": "yeonju.lee1005@kakao.com"
   },
   "scripts": {
-    "build": "nuxt build",
+    "build": "NITRO_PRESET=vercel-edge nuxt build",
     "dev": "nuxt dev --port 5000",
     "preview": "nuxt preview --port 5000",
     "postinstall": "nuxt prepare",
