--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
+    "@vite-pwa/nuxt": "^0.10.6",
     "@vueuse/nuxt": "^11.2.0",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
