--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "9.0.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@nuxtjs/supabase": "1.4.1",
+    "@nuxtjs/supabase": "^1.4.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/nuxt": "12.0.0",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -60,7 +60,7 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "supabase": "1.207.9",
+    "supabase": "1.225.3",
     "typescript": "^5.6.3",
     "vite-plugin-eslint2": "^5.0.1",
     "vue-chartjs": "^5.3.2",
