--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "dependencies": {
     "@nuxtjs/seo": "2.0.2",
-    "nuxt": "3.13.2",
-    "vue": "latest",
-    "vue-router": "latest"
+    "nuxt": "3.13.2"
   },
   "devDependencies": {
     "@iconify-json/devicon": "^1.2.4",
@@ -37,20 +35,21 @@
     "@iconify-json/lucide": "^1.2.11",
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
+    "@intlify/core-base": "^10.0.4",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "3.0.0-alpha.9",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
-    "@nuxtjs/i18n": "9.0.0",
+    "@nuxtjs/i18n": "9.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@nuxtjs/supabase": "^1.4.3",
+    "@nuxtjs/supabase": "1.4.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "@vueuse/nuxt": "12.0.0",
+    "@vueuse/nuxt": "^11.2.0",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -60,7 +59,7 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "supabase": "1.225.3",
+    "supabase": "1.207.9",
     "typescript": "^5.6.3",
     "vite-plugin-eslint2": "^5.0.1",
     "vue-chartjs": "^5.3.2",
