--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
     "@intlify/core-base": "^10.0.4",
+    "@intlify/shared": "^10.0.4",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "3.0.0-alpha.9",
@@ -43,7 +44,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "9.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@nuxtjs/supabase": "1.4.1",
+    "@nuxtjs/supabase": "1.4.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
@@ -59,7 +60,7 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "supabase": "1.207.9",
+    "supabase": "1.223.10",
     "typescript": "^5.6.3",
     "vite-plugin-eslint2": "^5.0.1",
     "vue-chartjs": "^5.3.2",
