[dewbee-005] develop v1.5.0 1. `windowSize` 조절 관련 컴포넌트 클라이언트 측 로딩처리  - fallback 컴포넌트 추가 구현  - breakpoint sm 사이즈 조절

--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
     "@iconify-json/lucide": "^1.2.11",
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
-    "@intlify/core-base": "^10.0.4",
-    "@intlify/shared": "^10.0.4",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "3.0.0-alpha.9",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
-    "@nuxtjs/i18n": "9.1.0",
+    "@nuxtjs/i18n": "9.0.0-rc.2",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@nuxtjs/supabase": "1.4.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
