--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "DewBee",
-  "packageManager": "bun@1.1.29",
   "version": "1.6.2",
   "private": true,
   "author": {
@@ -25,9 +24,7 @@
   },
   "dependencies": {
     "@nuxtjs/seo": "2.0.2",
-    "nuxt": "3.13.2",
-    "vue": "latest",
-    "vue-router": "latest"
+    "nuxt": "3.13.2"
   },
   "devDependencies": {
     "@iconify-json/devicon": "^1.2.4",
@@ -41,7 +38,7 @@
     "@nuxt/ui": "3.0.0-alpha.9",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
-    "@nuxtjs/i18n": "9.0.0-rc.2",
+    "@nuxtjs/i18n": "^9.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@nuxtjs/supabase": "1.4.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
