[dewbee-005] develop v1.5.0 1. `windowSize` 조절 관련 컴포넌트 클라이언트 측 로딩처리  - fallback 컴포넌트 추가 구현  - breakpoint sm 사이즈 조절

--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
     "vue-chartjs": "^5.3.2",
     "vue-dompurify-html": "^5.1.0",
     "yup": "^1.4.0"
+  },
+  "overrides": {
+    "@intlify/core-base": "10.0.5",
+    "@intlify/shared": "10.0.5"
   }
 }
