--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "modern-screenshot": "^4.5.5",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.11",
     "nuxt-time": "^1.0.2",
     "octokit": "^4.0.2",
     "pinia-plugin-persistedstate": "^4.1.3",
