--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@iconify-json/svg-spinners": "^1.2.1",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/ui": "3.0.0-alpha.9",
+    "@nuxt/ui": "^3.0.0-alpha.10",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "^9.1.0",
