--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "supabase:type-board": "supabase gen types --lang=typescript --project-id biynqxysclkvwrscmupr --schema board > app/types/supabaseBoard.ts"
   },
   "dependencies": {
-    "@nuxtjs/seo": "2.0.2",
-    "nuxt": "^3.14.1592",
+    "@nuxtjs/seo": "^3.0.3",
+    "nuxt": "^3.17.3",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -35,24 +35,23 @@
     "@iconify-json/lucide": "^1.2.11",
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/svg-spinners": "^1.2.1",
-    "@nuxt/eslint": "^0.6.1",
-    "@nuxt/image": "^1.8.1",
-    "@nuxt/ui": "^3.0.0-alpha.10",
+    "@nuxt/eslint": "^1.4.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/ui": "3.1.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
-    "@nuxtjs/i18n": "^9.1.0",
+    "@nuxtjs/i18n": "^9.5.4",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@nuxtjs/supabase": "^1.4.4",
+    "@nuxtjs/supabase": "^1.5.1",
     "@pinia/nuxt": "^0.7.0",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/nuxt": "13.2.0",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "modern-screenshot": "^4.5.5",
-    "nuxt-time": "^1.0.2",
     "octokit": "^4.0.2",
     "pinia-plugin-persistedstate": "^4.1.3",
     "sass": "^1.81.0",
@@ -65,9 +64,5 @@
     "vue-chartjs": "^5.3.2",
     "vue-dompurify-html": "^5.1.0",
     "yup": "^1.4.0"
-  },
-  "overrides": {
-    "@intlify/core-base": "10.0.5",
-    "@intlify/shared": "10.0.5"
   }
 }
