--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "modern-screenshot": "^4.5.5",
+    "nuxt-time": "^1.0.3",
     "octokit": "^4.0.2",
     "pinia-plugin-persistedstate": "^4.1.3",
     "sass": "^1.81.0",
